--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "wx-bot",
+  "name": "lllcode",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
   "type": "module",
+  "private": true,
   "engines": {
     "node": "^14.13.1 || >=16.0.0"
   },
