--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
     "@types/node": "^16.3.1",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
+    "@types/serviceworker": "^0.0.57",
     "antd": "^4.16.7",
     "concurrently": "^6.2.0",
     "cross-env": "^7.0.3",
     "http-server": "^13.0.2",
     "husky": "^7.0.1",
+    "idb-keyval": "^6.2.0",
     "lint-staged": "^11.1.1",
     "nodemon": "^2.0.10",
     "prettier": "^2.3.2",
