--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "laabr": "^6.1.3",
     "lowdb": "^2.1.0",
     "moment": "^2.29.1",
-    "node-schedule": "^2.0.0",
-    "superagent": "^6.1.0"
+    "node-schedule": "^2.0.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.12",
