fix: fix db.json i/o error

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,4 @@ services:
       - NODE_ENV=production
       - ADMIN_TOKEN=${ADMIN_TOKEN}
     volumes:
-      - ./db.json:/app/db.json
+      - ./data:/app/data
